--- a/r-references.bib
+++ b/r-references.bib
@@ -211,3 +211,30 @@
   note = {R package version 1.1.0},
   url = {https://CRAN.R-project.org/package=cowplot},
 }
+@article{cook2004marginal,
+  title={Marginal analysis of incomplete longitudinal binary data: a cautionary note on LOCF imputation},
+  author={Cook, Richard J and Zeng, Leilei and Yi, Grace Y},
+  journal={Biometrics},
+  volume={60},
+  number={3},
+  pages={820--828},
+  year={2004},
+  publisher={Wiley Online Library}
+}
+@article{streiner2008missing,
+  title={Missing data and the trouble with LOCF},
+  author={Streiner, David L},
+  journal={Evidence-based mental health},
+  volume={11},
+  number={1},
+  pages={3--5},
+  year={2008},
+  publisher={Royal College of Psychiatrists}
+}
+@article{kunzmann2020imputation,
+  title={Imputation of ordinal outcomes: a comparison of approaches in traumatic brain injury},
+  author={Kunzmann, Kevin and Wernisch, Lorenz and Richardson, Sylvia and Steyerberg, Ewout W and Lingsma, Hester and Ercole, Ari and Maas, Andrew IR and Menon, David and Wilson, Lindsay},
+  journal={Journal of Neurotrauma},
+  year={2020},
+  publisher={Mary Ann Liebert, Inc., publishers 140 Huguenot Street, 3rd Floor New~.}
+}
